src/objects/Case_Resource__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Resources</relationshipLabel>
        <relationshipName>Case_Resources</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <inlineHelpText>Will be populated by workflow later...</inlineHelpText>
        <label>Company</label>
        <picklist>
            <picklistValues>
                <fullName>BSC</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2020 Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Force</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>SHORT description of what the person will be doing</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours_Actual__c</fullName>
        <label>Hours (Actual)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Planned__c</fullName>
        <label>Hours (Planned)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Case_Resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Case Resource</label>
    <nameField>
        <displayFormat>CR-{0000000}</displayFormat>
        <label>Case Resource Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Resources</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>